--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -7,7 +7,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix: \\ The Life-cycle Benefits of an Influential Early Childhood Intervention}}
+\title{\Large \textbf{Appendix: \\ The Life-cycle Benefits of an Influential Early Childhood Program}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -20,11 +20,7 @@ The University of Chicago \and
 Duncan Ermini Leaf \\
 University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
-University of Southern California \and
-Joshua Shea \\
-The University of Chicago \and
-Jake C. Torcasso \\
-The University of Chicago}
+University of Southern California}
 \date{First Draft: January 5, 2016\\ This Draft: \today}
 \maketitle
 \thispagestyle{empty}
