--- a/output/allsamplesmatch.tex
+++ b/output/allsamplesmatch.tex
@@ -1,20 +1,20 @@
-% matrix: all file: allsamplesmatch.tex  13 Sep 2016 19:23:52
+% matrix: all file: allsamplesmatch.tex  14 Sep 2016 00:33:26
 \begin{table}[htbp]
-\begin{tabular}{lcccc} \hline \hline
- & male  & years 30y  & si30y inc labor  & si34y bmi  \\  \hline 
-m &     0.487 &    12.279 & 26083.818 &    33.533 \\  
-se &     0.503 &     2.265 & 26747.451 &     7.840 \\  
-m &     0.438 &    12.424 & 23500.061 &    27.971 \\  
-se &     0.496 &     1.751 & 51545.914 &     6.183 \\  
-m &     0.462 &    12.813 & 12794.552 &  1034.972 \\  
-se &     0.499 &     1.698 & 10849.969 &  2130.209 \\  
-m &     0.471 &    12.923 & 25873.078 &    29.229 \\  
-se &     0.499 &     2.038 & 21668.840 &     6.712 \\  
-m &     0.500 &    12.763 & 23298.833 &    29.708 \\  
-se &     0.500 &     1.860 & 21565.480 &     6.543 \\  
-m &     0.575 &    11.706 & 10494.922 &  1158.333 \\  
-se &     0.494 &     0.747 & 10779.823 &  2386.236 \\  
-m &     0.441 &    12.701 & 21693.718 &    30.058 \\  
-se &     0.497 &     2.050 & 21971.340 &     7.022 \\  
+\begin{tabular}{lcccccccccc} \hline \hline
+ & male  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  & male  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  \\  \hline 
+m &     0.487 &    12.279 & 13890.419 & 24711.694 &    34.153 &     0.507 &    13.646 & 14057.678 & 25217.499 &    32.750 \\  
+se &     0.503 &     2.265 & 12603.333 & 24461.184 &     7.524 &     0.503 &     2.414 & 11472.872 & 22745.919 &     7.004 \\  
+m &     0.438 &    12.424 &    11.443 & 23500.061 &    27.971 &     0.444 &    12.540 &    11.486 & 24149.740 &    27.919 \\  
+se &     0.496 &     1.751 &     1.790 & 51545.914 &     6.183 &     0.497 &     1.761 &     1.803 & 53724.508 &     6.155 \\  
+m &     0.449 &    12.816 &  5158.115 & 23359.956 & 24117.110 &     0.409 &    13.093 &  5115.271 & 24390.686 & 24766.462 \\  
+se &     0.497 &     1.900 &  4944.940 & 22487.280 & 22112.035 &     0.492 &     1.989 &  4857.383 & 23133.663 & 22544.684 \\  
+m &     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 &     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 \\  
+se &     0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 &     0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 \\  
+m &     0.500 &    12.763 &    10.964 & 23298.833 &    29.708 &         . &         . &         . &         . &         . \\  
+se &     0.500 &     1.860 &     1.419 & 21565.480 &     6.543 &         . &         . &         . &         . &         . \\  
+m &     0.574 &    11.563 &  3679.255 & 13812.201 & 15794.935 &         . &         . &         . &         . &         . \\  
+se &     0.494 &     1.064 &  4330.733 & 14293.060 & 20327.214 &         . &         . &         . &         . &         . \\  
+m &     0.441 &    12.701 &  9211.158 & 21693.718 &    30.058 &         . &         . &         . &         . &         . \\  
+se &     0.497 &     2.050 & 10289.319 & 21971.340 &     7.022 &         . &         . &         . &         . &         . \\  
 \hline \hline \end{tabular}
 \end{table}
