morning code for typists

--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -16,7 +16,7 @@ Subject Transfer Income	&	465	&	0.10	&	2.34	&	-3,176	&	\textbf{0.15}	&	\textbf{1
 	&		&	(0.08)	&	(1.10)	&		&	(0.04)	&	(4.62)	&		&	(0.04)	&	(2.15)	\\
 Medical Expenditures	&	-5,877	&	0.10	&	2.41	&	-35,480	&	\textbf{0.15}	&	\textbf{11.62}	&	-26,630	&	\textbf{0.14}	&	\textbf{5.92}	\\
 	&		&	(0.08)	&	(1.14)	&	&	(0.04)	&	(4.57)	&		&	(0.04)	&	(2.15)	\\
-Control Contamination	&	16,815	&	0.08	&	2.16	&	14,291	&	\textbf{0.14}	&	\textbf{11.08}	&	15,583	&	\textbf{0.11}	&	\textbf{5.46}	\\
+Alternative Preschools &	16,815	&	0.08	&	2.16	&	14,291	&	\textbf{0.14}	&	\textbf{11.08}	&	15,583	&	\textbf{0.11}	&	\textbf{5.46}	\\
 	&	&	(0.05)	&	(1.09)	&		&	(0.04)	&	(4.59)	&		&	(0.04)	&	(2.15)	\\
 Education Costs	&	-34,839	&	0.10	&	\textbf{2.72}	&	4,876	&	\textbf{0.14}	&	\textbf{11.18}	&	-12,294	&	\textbf{0.13}	&	\textbf{5.76}	\\
 	&		&	(0.07)	&	(1.09)	&		&	(0.04)	&	(4.63)	&		&	(0.04)	&	(2.15)	\\
