--- a/AppResOutput/abccare_jul7/rslt_female_cat3.tex
+++ b/AppResOutput/abccare_jul7/rslt_female_cat3.tex
@@ -20,6 +20,22 @@
 
      &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} \\  
 
+    & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{2,181}} & \mc{1}{c}{\scriptsize{5,322}} & \mc{1}{c}{\scriptsize{13,195}} & \mc{1}{c}{\scriptsize{13,013}} &  & \mc{1}{c}{\scriptsize{528}} & \mc{1}{c}{\scriptsize{3,941}} & \mc{1}{c}{\scriptsize{2,974}} \\  
+
+     &  & \mc{1}{c}{\scriptsize{(0.248)}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} &  & \mc{1}{c}{\scriptsize{(0.485)}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.277)}} \\  
+
+     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{13,633}} & \mc{1}{c}{\scriptsize{19,386}} & \mc{1}{c}{\scriptsize{22,294}} & \mc{1}{c}{\scriptsize{33,624}} & \mc{1}{c}{\scriptsize{26,474}} & \mc{1}{c}{\scriptsize{11,570}} & \mc{1}{c}{\scriptsize{11,176}} & \mc{1}{c}{\scriptsize{18,629}} \\  
+
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} & \mc{1}{c}{\scriptsize{(0.980)}} & \mc{1}{c}{\scriptsize{(0.129)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{(0.198)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} \\  
+
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8,565}} & \mc{1}{c}{\scriptsize{9,322}} & \mc{1}{c}{\scriptsize{2,829}} & \mc{1}{c}{\scriptsize{5,533}} & \mc{1}{c}{\scriptsize{8,435}} & \mc{1}{c}{\scriptsize{9,819}} & \mc{1}{c}{\scriptsize{8,817}} & \mc{1}{c}{\scriptsize{10,480}} \\  
+
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.089)}}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{(0.337)}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
+
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{5,708}} & \mc{1}{c}{\scriptsize{6,944}} & \mc{1}{c}{\scriptsize{25,270}} & \mc{1}{c}{\scriptsize{41,245}} & \mc{1}{c}{\scriptsize{25,135}} & \mc{1}{c}{\scriptsize{4,446}} & \mc{1}{c}{\scriptsize{4,608}} & \mc{1}{c}{\scriptsize{3,926}} \\  
+
+     &  & \mc{1}{c}{\scriptsize{(0.139)}} & \mc{1}{c}{\scriptsize{(0.129)}} & \mc{1}{c}{\scriptsize{(0.881)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.218)}} & \mc{1}{c}{\scriptsize{(0.218)}} & \mc{1}{c}{\scriptsize{(0.277)}} \\  
+
     \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 15}} & \mc{1}{c}{\scriptsize{0.193}} & \mc{1}{c}{\scriptsize{0.209}} & \mc{1}{c}{\scriptsize{0.192}} & \mc{1}{c}{\scriptsize{0.291}} & \mc{1}{c}{\scriptsize{0.284}} & \mc{1}{c}{\scriptsize{0.193}} & \mc{1}{c}{\scriptsize{0.163}} & \mc{1}{c}{\scriptsize{0.283}} \\  
 
      &  & \mc{1}{c}{\scriptsize{(0.237)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.316)}} & \mc{1}{c}{\scriptsize{(0.211)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.184)}} \\  
