--- a/output/allsamplesmatch.tex
+++ b/output/allsamplesmatch.tex
@@ -1,19 +1,21 @@
-% matrix: all file: allsamplesmatch.tex  14 Sep 2016 00:36:47
+% matrix: allpred file: allsamplesmatch.tex  14 Sep 2016 16:09:43
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccc} \hline \hline
  \multicolumn{1}{c}{ male }  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  & male  & years 30y  & si21y inc labor  & si30y inc labor  & si34y bmi  \\  \hline 
-    0.487 &    12.279 & 13890.419 & 24711.694 &    34.153 &     0.507 &    13.646 & 14057.678 & 25217.499 &    32.750 \\  
-    0.503 &     2.265 & 12603.333 & 24461.184 &     7.524 &     0.503 &     2.414 & 11472.872 & 22745.919 &     7.004 \\  
-    0.438 &    12.424 &    11.443 & 23500.061 &    27.971 &     0.444 &    12.540 &    11.486 & 24149.740 &    27.919 \\  
-    0.496 &     1.751 &     1.790 & 51545.914 &     6.183 &     0.497 &     1.761 &     1.803 & 53724.508 &     6.155 \\  
-    0.449 &    12.816 &  5158.115 & 23359.956 & 24117.110 &     0.409 &    13.093 &  5115.271 & 24390.686 & 24766.462 \\  
-    0.497 &     1.900 &  4944.940 & 22487.280 & 22112.035 &     0.492 &     1.989 &  4857.383 & 23133.663 & 22544.684 \\  
+    0.487 &    12.279 & 13890.419 & 26083.818 &    32.737 &     0.507 &    13.646 & 14057.678 & 38461.222 &    31.299 \\  
+    0.503 &     2.265 & 12603.333 & 26747.451 &     7.168 &     0.503 &     2.414 & 11472.872 & 58824.180 &     6.363 \\  
+        . &         . &         . & 30742.766 &         . &         . &         . &         . & 43451.984 &         . \\  
+        . &         . &         . & 37660.699 &         . &         . &         . &         . & 64708.281 &         . \\  
+    0.472 &    12.898 &    12.124 & 31311.562 &    26.835 &     0.479 &    13.080 &    12.195 & 32445.578 &    26.737 \\  
+    0.499 &     1.985 &     1.971 & 96894.465 &     5.779 &     0.500 &     1.993 &     1.988 &  1.01e+05 &     5.729 \\  
+    0.431 &    12.997 &  5965.449 & 22211.332 & 26197.327 &     0.386 &    13.282 &  5870.871 & 22732.107 & 26604.203 \\  
+    0.495 &     1.938 &  5107.452 & 10960.699 & 24321.145 &     0.487 &     2.026 &  4976.174 & 11474.550 & 24844.275 \\  
     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 &     0.471 &    12.923 & 11503.405 & 25873.078 &    29.229 \\  
     0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 &     0.499 &     2.038 & 11050.349 & 21668.840 &     6.712 \\  
     0.500 &    12.763 &    10.964 & 23298.833 &    29.708 &         . &         . &         . &         . &         . \\  
     0.500 &     1.860 &     1.419 & 21565.480 &     6.543 &         . &         . &         . &         . &         . \\  
-    0.574 &    11.563 &  3679.255 & 13812.201 & 15794.935 &         . &         . &         . &         . &         . \\  
-    0.494 &     1.064 &  4330.733 & 14293.060 & 20327.214 &         . &         . &         . &         . &         . \\  
+    0.542 &    11.520 &  3742.031 & 17191.630 & 15013.095 &         . &         . &         . &         . &         . \\  
+    0.498 &     1.081 &  4107.605 & 11392.587 & 21716.464 &         . &         . &         . &         . &         . \\  
     0.441 &    12.701 &  9211.158 & 21693.718 &    30.058 &         . &         . &         . &         . &         . \\  
     0.497 &     2.050 & 10289.319 & 21971.340 &     7.022 &         . &         . &         . &         . &         . \\  
 \hline \hline \end{tabular}
