--- a/output/nlsy_predict.tex
+++ b/output/nlsy_predict.tex
@@ -1,21 +1,21 @@
-\begin{tabular}{lcccc} \hline
- & (1) & (2) & (3) & (4) \\
- & nlsyZ & nlsyZX & nlsyZL & nlsyZL1 \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  \\
-male & 7,693.969*** & 8,841.633*** & 7,447.416*** & 2,634.299*** \\
- & (445.608) & (410.361) & (429.678) & (301.102) \\
-black & -6,881.343*** & -6,003.412*** & -4,581.288*** & -1,860.283*** \\
- & (441.303) & (400.777) & (435.746) & (298.999) \\
-years\_30y &  & 2,733.341*** & 2,839.201*** & 836.568*** \\
- &  & (100.363) & (105.775) & (81.768) \\
-inc\_labor21 &  &  & 0.671*** &  \\
- &  &  & (0.047) &  \\
-inc\_labor28 &  &  &  & 0.816*** \\
- &  &  &  & (0.024) \\
-Constant & 17,296.696*** & -19,781.627*** & -24,598.646*** & -6,675.758*** \\
- & (345.575) & (1,347.479) & (1,438.908) & (1,000.243) \\
- &  &  &  &  \\
-Observations & 7,834 & 7,834 & 7,169 & 7,095 \\
- R-squared & 0.110 & 0.258 & 0.305 & 0.691 \\ \hline
+\begin{tabular}{lcccccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
+ & nlsyZc & nlsyZt & nlsyZXc & nlsyZXt & nlsyZLc & nlsyZLt & nlsyZL1c & nlsyZL1t \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  &  &  &  &  &  \\
+male & 6,219.175*** & 6,356.307*** & 7,117.820*** & 7,607.672*** & 5,725.956*** & 6,216.821*** & 2,106.570*** & 2,311.490*** \\
+ & (381.462) & (444.690) & (352.939) & (407.219) & (364.544) & (425.777) & (265.712) & (303.553) \\
+black & -5,607.642*** & -5,688.084*** & -5,150.394*** & -4,994.999*** & -3,823.029*** & -3,775.318*** & -1,737.614*** & -1,621.612*** \\
+ & (386.635) & (439.804) & (356.854) & (399.225) & (381.924) & (431.636) & (256.122) & (287.850) \\
+years\_30y &  &  & 2,536.795*** & 2,634.281*** & 2,593.961*** & 2,706.537*** & 799.974*** & 773.933*** \\
+ &  &  & (81.757) & (95.205) & (85.765) & (100.476) & (73.768) & (79.358) \\
+inc\_labor21 &  &  &  &  & 0.637*** & 0.627*** &  &  \\
+ &  &  &  &  & (0.043) & (0.050) &  &  \\
+inc\_labor28 &  &  &  &  &  &  & 0.774*** & 0.782*** \\
+ &  &  &  &  &  &  & (0.021) & (0.022) \\
+Constant & 15,572.398*** & 16,568.877*** & -17,659.060*** & -18,893.301*** & -21,611.129*** & -22,998.860*** & -5,761.074*** & -5,570.719*** \\
+ & (304.541) & (336.484) & (1,085.558) & (1,274.381) & (1,148.548) & (1,366.048) & (834.721) & (959.266) \\
+ &  &  &  &  &  &  &  &  \\
+Observations & 7,297 & 5,874 & 7,297 & 5,874 & 6,650 & 5,291 & 6,601 & 5,324 \\
+ R-squared & 0.102 & 0.095 & 0.245 & 0.250 & 0.309 & 0.305 & 0.690 & 0.693 \\ \hline
 \end{tabular}
